syntax="proto3";

option go_package="./;sys;";


service base {
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc Info(InfoRequest) returns(InfoResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginResponse {
  string token = 1;
}

message InfoRequest{
  string token  = 1;
}
message InfoResponse{
  message Data{
      repeated string menus = 1;
      repeated string btns = 2;
      string introduction = 3;
      string name = 4;
      string avatar = 5;
  }
  int32  code = 1;
  string msg = 2;
  Data data = 3;
}